# ml_products_returns

./: .dockerignore  .env.dist  .gitignore  Dockerfile.app  Dockerfile.mlflow  Makefile  README.md  docker-compose.yaml  main.py  promptail-config.yaml  pyproject.toml
.docker/grafana/provisioning/: loki.yaml
.docker/loki/config/: loki-config.yaml
.docker/promtail/config/: promtail-config.yaml
ml_products_returns/application/: orchestrator.py
ml_products_returns/application/use_cases/: clean_dataset.py  fetch_dataset.py  prepare_features.py  run_prediction.py  train_model.py
ml_products_returns/domain/: prediction_service.py  product_features.py  return_prediction.py
ml_products_returns/infrastructure/data/: kaggle_downloader.py  minio_client.py  spark_loader.py
ml_products_returns/infrastructure/utils/: logger.py  safe_s3_target.py
ml_products_returns/ports/inputs/tasks/: clean_dataset_task.py  execute_pipeline.py  fetch_dataset_task.py  model_pipeline.py  prepare_features_task.py  train_model_task.py
ml_products_returns/ports/outputs/: .gitkeep
tests/: conftest.py
tests/application/use_cases/: test_clean_dataset.py  test_prepare_features.py  test_train_model.py
tests/domain/: test_prediction_service.py  test_product_features.py  test_return_prediction.py
tests/infrastructure/data/: test_kaggle_downloader.py  test_minio_client.py
tests/ports/inputs/tasks/: test_clean_dataset_task.py  test_fetch_dataset_task.py  test_prepare_features_task.py
